vscode: Use jsonc for *.manifest files

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -62,7 +62,7 @@
       "app.config*": "jsonc",
       "cli": "ruby",
       "*.appfactory": "json",
-      "*.manifest": "json",
+      "*.manifest": "jsonc",
       "*.prd": "json",
       "Dockerfile*": "dockerfile",
       "workerd.*": "erb",
