vscode: Added more words to wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -107,6 +107,7 @@
     "cSpell.userWords": [
         "ALPN",
         "Arcieri",
+        "Asynchrony",
         "BSON",
         "CHLD",
         "Cors",
@@ -192,6 +193,7 @@
         "keypasswd",
         "klass",
         "lakto",
+        "leveldb",
         "mixins",
         "mkdir",
         "mtime",
