--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -111,6 +111,7 @@
         "Asynchrony",
         "BSON",
         "CHLD",
+        "CONO",
         "Cors",
         "Dashevskii's",
         "EADDRINUSE",
@@ -147,6 +148,7 @@
         "Silverlight",
         "Sverige",
         "Testem",
+        "USID",
         "Uncomment",
         "WNOHANG",
         "appfactory",
