--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -123,6 +123,7 @@
         "Errno",
         "Gemfile",
         "HTTPOK",
+        "Hejlsberg",
         "JDBC",
         "Loggable",
         "Lundberg",
