vscode: Updated wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -132,6 +132,8 @@
         "HTTPOK",
         "Hejlsberg",
         "JDBC",
+        "Klipper",
+        "Konsole",
         "Loggable",
         "Lundberg",
         "MSYS",
@@ -173,6 +175,7 @@
         "changelog",
         "chdir",
         "conditionalize",
+        "coreutils",
         "couchdb",
         "crontab",
         "deallocation",
@@ -188,14 +191,17 @@
         "executables",
         "favourite",
         "fieldops",
+        "findutils",
         "genrsa",
         "getpgid",
         "getpid",
+        "gnugp",
         "graphql",
         "gsub",
         "hjärtesorg",
         "htmlbars",
         "inkey",
+        "inodes",
         "intellisense",
         "ironmq",
         "javax",
@@ -219,6 +225,7 @@
         "pacman",
         "paginator",
         "passthrough",
+        "perlun",
         "pescetarian",
         "pids",
         "plundberg",
