--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -168,6 +168,7 @@
         "backend",
         "backtrace",
         "besökelsetid",
+        "bzip",
         "cacert",
         "camelize",
         "caname",
