vscode: Update wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -115,6 +115,7 @@
         "Arcieri",
         "Asynchrony",
         "BSON",
+        "Brändö",
         "CHLD",
         "CONO",
         "Citrix",
@@ -128,6 +129,7 @@
         "ESRCH",
         "Errno",
         "Excon",
+        "Fransmanni",
         "Gemfile",
         "HTTPOK",
         "Hejlsberg",
@@ -156,11 +158,14 @@
         "SIGTERM",
         "SYSCALL",
         "Silverlight",
+        "Smedsby",
         "Sverige",
         "Testem",
         "USID",
         "Uncomment",
+        "Vasa",
         "WNOHANG",
+        "Wärtsiläs",
         "appfactory",
         "arity",
         "autoinject",
@@ -169,6 +174,7 @@
         "backtrace",
         "besökelsetid",
         "bzip",
+        "bönegrupp",
         "cacert",
         "camelize",
         "caname",
@@ -218,6 +224,7 @@
         "mtime",
         "mutex",
         "mydomain",
+        "naanbröd",
         "nada",
         "nginx",
         "noprompt",
