vscode: profile and bashrc are shell scripts
So they should be treated as such.

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -73,6 +73,8 @@
         "Dockerfile*": "dockerfile",
         "workerd.*": "erb",
         "workerd.rb": "ruby",
+        "profile": "shellscript",
+        "bashrc": "shellscript"
     },
     "editor.wordWrap": "on",
 
