--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -211,6 +211,7 @@
         "gsub",
         "hjärtesorg",
         "htmlbars",
+        "initrd",
         "inkey",
         "inodes",
         "intellisense",
@@ -232,6 +233,7 @@
         "nada",
         "nginx",
         "noprompt",
+        "nvidia",
         "openssl",
         "ostruct",
         "pacman",
