vscode: Enable custom titleBarStyle
Looks much nicer on Windows and Linux this way.

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -319,5 +319,7 @@
 
     "yaml.format.enable": true,
     "gitlens.historyExplorer.enabled": true,
-    "vsicons.dontShowNewVersionMessage": true
+    "vsicons.dontShowNewVersionMessage": true,
+
+    "window.titleBarStyle": "custom"
 }
