--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -10,7 +10,7 @@
 
     // The number of spaces a tab is equal to. This setting is overridden based on the file contents when `editor.detectIndentation` is on.
     "editor.tabSize": 4,
-    "editor.rulers": [75, 132],
+    "editor.rulers": [72, 100, 132],
 
     // This is a pretty useless feature that we disable.
     "explorer.openEditors.visible": 0,
