vscode: Add more words to dictionary

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -251,6 +251,7 @@
         "progname",
         "qunit",
         "rackup",
+        "readfp",
         "repo",
         "retryable",
         "rindex",
@@ -265,6 +266,7 @@
         "srcstorepass",
         "srcstoretype",
         "strftime",
+        "strptime",
         "struct",
         "syslog",
         "tada",
