Set LC_TIME to use Swedish time formatting
This is important since it affects apps like IntelliJ. By default, it
shows timestamps using an 19/03/18 format, which is very ugly and hard
to parse (is this March 19 2018 or March 18 2019?). The Swedish locale
is good and uses a four-digit year which is much more unambiguous.

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -115,6 +115,7 @@
     "cSpell.userWords": [
         "ALPN",
         "Arcieri",
+        "Armeria",
         "Asynchrony",
         "BSON",
         "Brändö",
@@ -333,4 +334,7 @@
     "yaml.format.enable": true,
     "reflow.preferredLineLength": 100,
     "gitlens.codeLens.enabled": false,
+    "java.configuration.checkProjectSettingsExclusions": false,
+    "editor.suggestSelection": "first",
+    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
 }
