--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -337,4 +337,9 @@
     "java.configuration.checkProjectSettingsExclusions": false,
     "editor.suggestSelection": "first",
     "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+    "gitlens.views.fileHistory.enabled": true,
+    "gitlens.views.lineHistory.enabled": true,
+    "csharp.referencesCodeLens.enabled": false,
+    "javascript.autoClosingTags": false,
+    "typescript.autoClosingTags": false
 }
