vscode: add word to spellchecker wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -250,6 +250,7 @@
         "prepended",
         "printf",
         "progname",
+        "proto",
         "qunit",
         "rackup",
         "readfp",
