--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -128,6 +128,7 @@
         "ECDHE",
         "ECONNREFUSED",
         "EEST",
+        "ENOENT",
         "ENVVARSDOCS",
         "ESRCH",
         "Errno",
@@ -342,5 +343,6 @@
     "gitlens.views.lineHistory.enabled": true,
     "csharp.referencesCodeLens.enabled": false,
     "javascript.autoClosingTags": false,
-    "typescript.autoClosingTags": false
+    "typescript.autoClosingTags": false,
+    "javascript.implicitProjectConfig.checkJs": true
 }
