vscode: add more words to dictionary + other tweaks

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -123,6 +123,7 @@
         "Asynchrony",
         "BSON",
         "Brändö",
+        "CFLAGS",
         "CHLD",
         "CONO",
         "Citrix",
@@ -147,6 +148,7 @@
         "Klipper",
         "Konsole",
         "Kotipizza",
+        "LDFLAGS",
         "Loggable",
         "Lundberg",
         "MSYS",
@@ -154,6 +156,7 @@
         "Memoized",
         "Micael",
         "Mixlib",
+        "Moren",
         "NOTIME",
         "Noindex",
         "Npgsql",
@@ -184,6 +187,7 @@
         "appfactory",
         "arity",
         "autoinject",
+        "axelf",
         "babysteps",
         "backend",
         "backtrace",
@@ -196,6 +200,7 @@
         "changeit",
         "changelog",
         "chdir",
+        "cmocka",
         "conditionalize",
         "coreutils",
         "couchdb",
@@ -209,6 +214,7 @@
         "downcase",
         "dylib",
         "ecraft",
+        "enqueues",
         "eval",
         "executables",
         "favourite",
@@ -245,6 +251,7 @@
         "mydomain",
         "naanbröd",
         "nada",
+        "nemo",
         "nginx",
         "noprompt",
         "nvidia",
@@ -275,6 +282,7 @@
         "rubocop",
         "sigchild",
         "simplecov",
+        "skogen",
         "spendrups",
         "srckeystore",
         "srcstorepass",
@@ -334,7 +342,6 @@
     "vsicons.dontShowNewVersionMessage": true,
 
     "workbench.activityBar.visible": true,
-    "workbench.colorTheme": "One Dark Pro",
     "workbench.editor.enablePreview": false,
     "workbench.iconTheme": "vscode-icons",
     "workbench.sideBar.location": "left",
@@ -360,4 +367,6 @@
     "[json]": {},
     "selectline.alignment": "right",
     "selectline.displayFormat": "%d line(s) selected"
+    "workbench.colorTheme": "One Dark Pro",
+    "C_Cpp.suggestSnippets": false
 }
