--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -78,7 +78,8 @@
         "profile": "shellscript",
         "bashrc": "shellscript",
         "bash_aliases": "shellscript",
-        "bash_profile": "shellscript"
+        "bash_profile": "shellscript",
+        ".yamllint": "yaml"
     },
     "editor.wordWrap": "on",
 
