vscode: add more words to dictionary

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -153,6 +153,7 @@
         "ESRCH",
         "Errno",
         "Excon",
+        "Fixnum",
         "Fransmanni",
         "Gemfile",
         "HTTPOK",
@@ -228,6 +229,7 @@
         "deststoretype",
         "devcert",
         "downcase",
+        "downto",
         "dylib",
         "ecraft",
         "enqueues",
@@ -252,6 +254,7 @@
         "intellisense",
         "iptables",
         "ironmq",
+        "jacoco",
         "javax",
         "jcmd",
         "jsonapi",
@@ -281,6 +284,7 @@
         "perlun",
         "pescetarian",
         "pids",
+        "pipenv",
         "plundberg",
         "postgresql",
         "precompile",
@@ -320,6 +324,7 @@
         "unmanaged",
         "unshift",
         "upcase",
+        "upto",
         "uuid",
         "uxfactory",
         "venv",
