--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -206,6 +206,7 @@
         "Wasa",
         "Wolffskavägen",
         "Wärtsiläs",
+        "adoptopenjdk",
         "ansible",
         "appfactory",
         "arity",
@@ -270,6 +271,7 @@
         "klass",
         "lakto",
         "leveldb",
+        "lnyberg",
         "mixins",
         "mkdir",
         "mtime",
@@ -297,6 +299,7 @@
         "prepended",
         "printf",
         "progname",
+        "promxy",
         "proto",
         "qunit",
         "rackup",
@@ -311,6 +314,7 @@
         "sigchild",
         "simplecov",
         "skogen",
+        "slovdahl",
         "spendrups",
         "srckeystore",
         "srcstorepass",
