vscode: Set tabSize for YAML files

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -62,6 +62,10 @@
         "editor.tabSize": 2
     },
 
+    "[yaml]": {
+        "editor.tabSize": 2
+    },
+
     "files.exclude": {
         "client/tmp/**/*": true,
         "dist/**/*": true,
