vscode: Add more words to dictionary

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -257,6 +257,7 @@
         "graphql",
         "gsub",
         "hibox",
+        "hiboxcentre",
         "hiboxsystems",
         "hjärtesorg",
         "htmlbars",
@@ -277,6 +278,7 @@
         "lakto",
         "leveldb",
         "lnyberg",
+        "mariadb",
         "mixins",
         "mkdir",
         "mtime",
