vscode: Update word list

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -155,6 +155,7 @@
         "Citrix",
         "Cors",
         "Dashevskii's",
+        "Dlogback",
         "EADDRINUSE",
         "ECDHE",
         "ECONNREFUSED",
