vscode: Update wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -159,6 +159,7 @@
         "EADDRINUSE",
         "ECDHE",
         "ECONNREFUSED",
+        "EEPROM",
         "EEST",
         "ENOENT",
         "ENVVARSDOCS",
@@ -171,6 +172,7 @@
         "HTTPOK",
         "Hejlsberg",
         "Hubi",
+        "ICMP",
         "JDBC",
         "Jasså",
         "Klipper",
@@ -195,6 +197,7 @@
         "PREPEND",
         "Postgre",
         "Postgres",
+        "RXDESC",
         "Rubo",
         "SIGKILL",
         "SIGTERM",
@@ -332,6 +335,7 @@
         "struct",
         "syslog",
         "tada",
+        "tetris",
         "textblock",
         "textblocks",
         "timestamps",
