--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -202,6 +202,7 @@
         "Owin",
         "PEBKAC",
         "PKCS",
+        "POSIX",
         "PREPEND",
         "Postgre",
         "Postgres",
