--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -240,6 +240,7 @@
         "cacert",
         "camelize",
         "caname",
+        "canonicalize",
         "changeit",
         "changelog",
         "chdir",
@@ -248,6 +249,7 @@
         "coreutils",
         "couchdb",
         "crontab",
+        "customised",
         "deallocation",
         "destkeypass",
         "destkeystore",
