--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -248,6 +248,7 @@
         "conditionalize",
         "coreutils",
         "couchdb",
+        "cpus",
         "crontab",
         "customised",
         "deallocation",
@@ -294,6 +295,7 @@
         "lakto",
         "leveldb",
         "lnyberg",
+        "lxdbr",
         "mariadb",
         "mixins",
         "mkdir",
@@ -305,6 +307,7 @@
         "nada",
         "nemo",
         "nginx",
+        "nictype",
         "noprompt",
         "nvidia",
         "openssl",
@@ -341,6 +344,7 @@
         "skogen",
         "slovdahl",
         "spendrups",
+        "sprintf",
         "srckeystore",
         "srcstorepass",
         "srcstoretype",
