vscode: Misc setting changes

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -443,5 +443,7 @@
             "type": "GitLab"
         }
     ],
-    "go.useLanguageServer": true
+    "go.useLanguageServer": true,
+    "files.autoSave": "afterDelay",
+    "terminal.integrated.shell.linux": "/bin/bash"
 }
