vscode: More updates to wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -186,6 +186,7 @@
         "Klipper",
         "Konsole",
         "Kotipizza",
+        "Kreatel",
         "LDFLAGS",
         "Loggable",
         "Lundberg",
@@ -195,6 +196,7 @@
         "Micael",
         "Mixlib",
         "Moren",
+        "NOPASSWD",
         "NOTIME",
         "Noindex",
         "Npgsql",
@@ -351,6 +353,7 @@
         "strftime",
         "strptime",
         "struct",
+        "sudoers",
         "syslog",
         "tada",
         "tetris",
