vscode: Update wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -206,6 +206,7 @@
         "PKCS",
         "POSIX",
         "PREPEND",
+        "Paulus",
         "Postgre",
         "Postgres",
         "RXDESC",
