vscode: Updated wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -302,6 +302,7 @@
         "mariadb",
         "mixins",
         "mkdir",
+        "modifyvm",
         "mtime",
         "mutex",
         "mydomain",
@@ -309,6 +310,8 @@
         "naanbröd",
         "nada",
         "nemo",
+        "netcfg",
+        "networkd",
         "nginx",
         "nictype",
         "noprompt",
@@ -351,11 +354,13 @@
         "srckeystore",
         "srcstorepass",
         "srcstoretype",
+        "sshd",
         "strftime",
         "strptime",
         "struct",
         "sudoers",
         "syslog",
+        "systemctl",
         "tada",
         "tetris",
         "textblock",
@@ -363,6 +368,7 @@
         "timestamps",
         "transpiler",
         "trello",
+        "uartmode",
         "uncommented",
         "unencrypted",
         "unmanaged",
