(README) Misc improvements

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -183,6 +183,7 @@
         "ICMP",
         "JDBC",
         "Jasså",
+        "Karabiner",
         "Klipper",
         "Konsole",
         "Kotipizza",
@@ -275,6 +276,7 @@
         "getpid",
         "gnugp",
         "graphql",
+        "gsettings",
         "gsub",
         "hibox",
         "hiboxcentre",
