(cinnamon) Add details about my cinnamon setup

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -200,6 +200,7 @@
         "NOPASSWD",
         "NOTIME",
         "Noindex",
+        "Nokto",
         "Npgsql",
         "Oleg",
         "Owin",
@@ -255,6 +256,7 @@
         "cpus",
         "crontab",
         "customised",
+        "dconf",
         "deallocation",
         "destkeypass",
         "destkeystore",
@@ -299,6 +301,7 @@
         "klass",
         "lakto",
         "leveldb",
+        "libgnomekbd",
         "lnyberg",
         "lxdbr",
         "mariadb",
@@ -375,6 +378,7 @@
         "uncommented",
         "unencrypted",
         "unmanaged",
+        "unmaximize",
         "unshift",
         "upcase",
         "upto",
