vscode: Update wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -151,6 +151,8 @@
     "cSpell.language": "en,sv",
     "cSpell.userWords": [
         "ALPN",
+        "Allsm",
+        "Allsmäktiges",
         "Ansible's",
         "Arcieri",
         "Armeria",
@@ -199,6 +201,7 @@
         "Moren",
         "NOPASSWD",
         "NOTIME",
+        "Noas",
         "Noindex",
         "Nokto",
         "Npgsql",
@@ -216,9 +219,11 @@
         "SIGKILL",
         "SIGTERM",
         "SYSCALL",
+        "Samarien",
         "Silverlight",
         "Smedsby",
         "Solf",
+        "Strongs",
         "Strömsö",
         "Sverige",
         "Testem",
@@ -236,12 +241,15 @@
         "arity",
         "autoinject",
         "axelf",
+        "b",
         "babysteps",
         "backend",
         "backtrace",
         "besökelsetid",
         "bzip",
         "bönegrupp",
+        "bönespråk",
+        "bönesvaren",
         "cacert",
         "camelize",
         "caname",
@@ -280,6 +288,8 @@
         "graphql",
         "gsettings",
         "gsub",
+        "heartedly",
+        "hebr",
         "hibox",
         "hiboxcentre",
         "hiboxsystems",
@@ -295,10 +305,12 @@
         "javax",
         "jcmd",
         "jsonapi",
+        "k",
         "kernelfs",
         "keyalg",
         "keypasswd",
         "klass",
+        "ktiges",
         "lakto",
         "leveldb",
         "libgnomekbd",
@@ -315,12 +327,15 @@
         "naanbröd",
         "nada",
         "nemo",
+        "nespr",
+        "nesvaren",
         "netcfg",
         "networkd",
         "nginx",
         "nictype",
         "noprompt",
         "nvidia",
+        "obiblisk",
         "openssl",
         "ostruct",
         "pacman",
@@ -339,9 +354,13 @@
         "progname",
         "promxy",
         "proto",
+        "protoevangelium",
         "qunit",
+        "r",
         "rackup",
+        "rdigg",
         "readfp",
+        "relse",
         "repo",
         "retryable",
         "rindex",
@@ -350,6 +369,7 @@
         "rsync",
         "rtrim",
         "rubocop",
+        "rättfärdiggörelse",
         "sigchild",
         "simplecov",
         "skogen",
@@ -374,6 +394,7 @@
         "timestamps",
         "transpiler",
         "trello",
+        "ttf",
         "uartmode",
         "uncommented",
         "unencrypted",
