vscode: More spell checker word updates

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -236,6 +236,7 @@
         "Wärtsiläs",
         "Zabbix",
         "adoptopenjdk",
+        "agapao",
         "ansible",
         "appfactory",
         "arity",
@@ -295,6 +296,7 @@
         "hiboxsystems",
         "hjärtesorg",
         "htmlbars",
+        "ifeq",
         "initrd",
         "inkey",
         "inodes",
@@ -311,10 +313,12 @@
         "keypasswd",
         "klass",
         "ktiges",
+        "lagiskheten",
         "lakto",
         "leveldb",
         "libgnomekbd",
         "lnyberg",
+        "loveth",
         "lxdbr",
         "mariadb",
         "mixins",
@@ -326,6 +330,7 @@
         "mysqld",
         "naanbröd",
         "nada",
+        "neighbour",
         "nemo",
         "nespr",
         "nesvaren",
@@ -403,6 +408,7 @@
         "unshift",
         "upcase",
         "upto",
+        "utlevd",
         "uuid",
         "uxfactory",
         "venv",
