vscode: Update wordlist

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -153,6 +153,9 @@
         "ALPN",
         "Allsm",
         "Allsmäktiges",
+        "Amalekites",
+        "Amorites",
+        "Anak",
         "Ansible's",
         "Arcieri",
         "Armeria",
@@ -185,6 +188,9 @@
         "ICMP",
         "JDBC",
         "Jasså",
+        "Jebusites",
+        "Jephunneh",
+        "Kadesh",
         "Karabiner",
         "Klipper",
         "Konsole",
@@ -211,6 +217,7 @@
         "PKCS",
         "POSIX",
         "PREPEND",
+        "Paran",
         "Paulus",
         "Postgre",
         "Postgres",
